test/trivial/bradc/undefinedfn.good
undefinedfn.chpl:1: In function 'main':
undefinedfn.chpl:4: error: unresolved call 'foo()'
