test/trivial/bradc/undefinedfn.chpl
proc main() {
  var x: real;

  x = foo();
  writeln("x is: ", x);
}
